@@ -7,6 +7,10 @@ $icon-size: 1em;
         color: $color-teal;
     }
 
+    .icon-warning {
+        color: $color-red;
+    }
+
     &__icon {
         color: $color-teal;
         margin-right: 0.2em;
